# escalade

./: .env.example  .envrc  .gitignore  AGENTS.md  README.md  debug_prefetch.py  debug_reverse.py  debug_slots.py  pyproject.toml  test_gradient.py
.codex/prompts/: speckit.memory-commit.md  speckit.memory-spec.md
.specify/memory/: constitution.md  project-memory.md
.specify/templates/: feature-doc-template.md  plan-template.md  project-memory-template.md  server-ops-template.md  spec-template.md  tasks-template.md
docs/: cadrage-v1.md  deployment.md  operations.md  rewrite-functional-reference.md
docs/deploy/: README.md
docs/features/: feature_audit_and_operations.md  feature_booking_and_participation.md  feature_identity_and_access.md  feature_notifications_and_deadlines.md  feature_responsibility_coverage.md  feature_session_planning_and_calendar.md
scripts/deploy/: README.md  backup_sqlite.sh  common.sh  first_release.sh  provision_vm.sh  release.sh  restore_sqlite.sh  rollback.sh  smoke_check.sh
specs/001-free-session-booking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gcp-vm-deploy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-club-visual-refresh/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-session-opener-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-session-calendar/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/accounts/: admin.py  (+10 more)
tests/: conftest.py
(+107 files in other folders)
