[project]
name = "escalade"
version = "0.1.0"
description = "Reservations de seances libres pour un club d'escalade"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
testpaths = ["tests"]

